RESOLVED FIXED66589
[chromium] Content and render surface textures not freed when compositor context destroyed
https://bugs.webkit.org/show_bug.cgi?id=66589
Summary [chromium] Content and render surface textures not freed when compositor cont...
James Robinson
Reported 2011-08-19 14:08:23 PDT
[chromium] Content and render surface textures not freed when compositor context destroyed
Attachments
Patch (2.29 KB, patch)
2011-08-19 14:19 PDT, James Robinson
no flags
James Robinson
Comment 1 2011-08-19 14:19:10 PDT
James Robinson
Comment 2 2011-08-19 14:22:45 PDT
We talked some in person about how to get better automated testing for stuff like this. I think the general thinking is that we need a way to test the compositing path with either a mock GraphicsContext3D or something lower-level to verify that we're actually releasing all of the resources we create.
Adrienne Walker
Comment 3 2011-08-20 12:49:22 PDT
Unofficially, looks good to me.
Kenneth Russell
Comment 4 2011-08-22 10:59:13 PDT
Comment on attachment 104563 [details] Patch rs=me
WebKit Review Bot
Comment 5 2011-08-22 11:19:11 PDT
Comment on attachment 104563 [details] Patch Clearing flags on attachment: 104563 Committed r93523: <http://trac.webkit.org/changeset/93523>
WebKit Review Bot
Comment 6 2011-08-22 11:19:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.