[chromium] Content and render surface textures not freed when compositor context destroyed https://bugs.webkit.org/show_bug.cgi?id=66589

Patch by James Robinson <jamesr@chromium.org> on 2011-08-22
Reviewed by Kenneth Russell.

Explicitly delete all managed textures when destroying the compositor
context.  This regressed due to a combination of using share groups
(so destroying a context no longer implicitly releases all resources
in that context) and switching the TextureManager over to support
deferred texture destruction.

We sadly don't have a way to construct automated tests for resource
leaks currently.

* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::cleanupSharedObjects):

Canonical link: https://commits.webkit.org/82505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93523 268f45cc-cd09-0410-ab3c-d52691b4dbfc